k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
  labels:
    app: my-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
      - name: my-react-app
        image: caderrimas/reactapp-helm-argocd:v1
        ports:
        - containerPort: 3001
